kubernetes/apps/vllm/app/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: vllm-inference
  namespace: vllm
  annotations:
    gatus.home-operations.com/endpoint: |
      name: "vLLM Inference Service"
      url: http://vllm-inference.vllm.svc.cluster.local:8000/health
spec:
  selector:
    app.kubernetes.io/name: vllm
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: vllm-embedding
  namespace: vllm
  annotations:
    gatus.home-operations.com/endpoint: |
      name: "vLLM Embedding Service"
      url: http://vllm-embedding.vllm.svc.cluster.local:8000/health
spec:
  selector:
    app.kubernetes.io/name: vllm-embedding
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
